PUL-3: Make subscription name configurable and avoid consumer to remain attached.

--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -4,3 +4,4 @@ privateKeyFile = /home/sqlstream/Downloads/my-ca/test_ecdsa_privkey.pem
 tlsCertFile = /home/sqlstream/Downloads/my-ca/admin.cert.pem
 tlsKeyFile = /home/sqlstream/Downloads/my-ca/admin.key-pk8.pem
 topicName = persistent://public/sqlstream/trial-1
+subscriptionName="my-subscription"
